# map-reduce-lite

./: .gitignore  Cargo.toml  README.md  build.rs  workload_test.sh
common/: Cargo.toml
common/src/: codec.rs  job.rs  lib.rs  minio.rs  utils.rs
mrl-coordinator/: Cargo.toml  build.rs  docker-compose.yml
mrl-coordinator/src/: args.rs  core.rs  job_queue.rs  jobs.rs  main.rs  minio.rs  worker_info.rs  worker_registry.rs
mrl-ctl/: Cargo.toml  build.rs
mrl-ctl/src/: args.rs  core.rs  main.rs
mrl-worker/: Cargo.toml  build.rs
mrl-worker/src/: args.rs  core.rs  main.rs  map.rs  reduce.rs
mrl-worker/src/workload/: mod.rs
protos/: coordinator.proto  worker.proto
src/: lib.rs
src/app/: mrl-coordinator.rs  mrl-ctl.rs
standalone/: Cargo.toml
standalone/src/: engine.rs  lib.rs  main.rs  standalone.rs
testcases/bigmm/: in1.txt  in2.txt  in3.txt
testcases/mm/: input
workload/: Cargo.toml
workload/src/: grep.rs  lib.rs  matrix_multiply.rs  vertex_degree.rs  wc.rs
