[package]
name = "mrl-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
common = { path = "../common"}
prost = "0.12.6"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.34.0"
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.21"
anyhow = "1.0.86"
bytes = "1.6.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[build-dependencies]
tonic-build = "0.11.0"
