[package]
name = "mrl-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
common = { path = "../common" }
prost = "0.12.6"
aws-sdk-s3 = "1.34.0"
clap = { version = "4.5.7", features = ["derive"] }
anyhow = "1.0.86"
bytes = "1.6.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
moka = { version = "0.12.7", features = ["sync"] }


[build-dependencies]
tonic-build = "0.11.0"
