[package]
name = "mrl-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
prost = "0.12.6"
tonic = "0.11.0"
bytes = "1.6.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[build-dependencies]
tonic-build = "0.11"

