[package]
name = "mrl-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
prost = "0.12.6"
tonic = "0.11.0"
bytes = "1.6.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
workload = { path = "../workload" }
common = { path = "../common" }
reqwest = "0.12.4"
anyhow = "1.0.86"
aws-config = "1.5.1"
aws-sdk-s3 = "1.36.0"
aws-smithy-types = "1.2.0"
url = "2.5.1"
glob = "0.3.1"
dashmap = "5.5.3"
walkdir = "2.5.0"


[build-dependencies]
tonic-build = "0.11"

