[package]
name = "standalone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
dashmap = "5.5.3"
glob = "0.3.1"
itertools = "0.13.0"
common = { path = "../common" }
clap = { version = "4.5.7", features = ["derive"] }
serde_json = "1.0.117"
workload = { path = "../workload" }